This file documents the revision history for mod_gearman.

next:
          - fix segfault on too old host checks

2.1.2 Fri Feb 13 13:40:25 CET 2015
          - fix sending results to dup server

2.1.1 Tue Jan 20 13:48:50 CET 2015
          - fix timeout handling

2.1.0 Sun Jan 18 17:17:10 CET 2015
          - add support for large plugin outputs
          - add --restrict_path option to restrict worker to certain paths

2.0.0 Thu Dec 11 23:46:11 CET 2014
          - migrated mod-gearman into a naemon addon to continue the nagios 4 branch
          - fixed some potential memory and filedescriptor leaks
          - fixed memory leak while processing check results
          - fixed unescaped newlines in performance data breaking pnp
          - fixed using timeout return code (Scott Sanders)
          - fixed running jobs twice when worker hits max-jobs (Tobias Deiminger)
          - fixed init script exiting with 0 on errors (Adrián)




1.4.14 Fri Nov 15 21:44:18 CET 2013
          - fixed segfault when dupserver list was empty

1.4.12 Tue Nov  5 10:26:07 CET 2013
          - fixed send_gearman to send duplicate result to normal server (Brian Christiansen)
          - ensure worker are running and doing jobs after reload/sighup

1.4.10 Mon Aug  5 11:38:53 CEST 2013
          - fixed segfault on empty arguments (Michael Friedrich)
          - fixed commands containing quotes

1.4.8 Sat Jul 27 13:42:11 CEST 2013
          - ensure worker exits, even if shm blocks
          - request proper macro escaping for nagios 4

1.4.6 Tue Jun  4 17:03:57 CEST 2013
          - kill complete process group on timeout
          - close open filehandles before running check
          - added new option 'orphan_return' to set return code of orphaned checks

1.4.4 Thu May  3 15:48:34 CEST 2013
          - added 'route_eventhandler_like_checks' option
          - fixed leaking FDs on reloading neb
          - install mini-epn when epn is enabled