@@ -176,6 +176,18 @@ use_perl_cache=on
 # perl scripts run by the embedded perl interpreter
 p1_file=./worker/mod_gearman_p1.pl
 
+
+# Security
+# restrict_path allows you to restrict this worker to only execute plugins
+# from these particular folders. Can be used multiple times to specify more
+# than one folder.
+#restrict_path=/usr/local/plugins/
+
+# list of forbidden characters in command lines. Only active if 'restrict_path'
+# is in use.
+#restrict_command_characters=$&();<>`"'|
+
+
 # Workarounds
 
 # workaround for rc 25 bug
